# 3d-game-template

./: Arcadefile  Cargo.toml  Dockerfile  package.json
.github/workflows/: main.yml
backend/: .env.local
game/src/client/: audio_control.rs  browser.rs  camera.rs  mod.rs  particle.rs  ui_debug.rs  ui_score.rs  ui_timer.rs
game/src/server/: mod.rs  network_controller.rs
game/src/shared/: animations.rs  collision.rs  components.rs  developer.rs  game_input.rs  hover.rs  inputs.rs  mod.rs  pickup.rs  ui_components.rs
resources/fonts/LondrinaSolid/: OFL.txt
resources/levels/: 10_game.lvl  99_empty.lvl
resources/models/static-models/Cube/: SM_Cube.gltf  SM_Cube.gltf.0.lod
resources/models/static-models/Pinball/: SM_PinBall.gltf  SM_PinBall.gltf.0.lod
scripts/: builder  notify_discord.py  notify_slack.py  website
website/: config-overrides.js  package-lock.json  package.json
website/src/components/MainPage/: index.tsx
