[package]
name = "template-3d-game"
description = "3D Game Template"
version = "0.1.0"
authors = ["Felipe Rocha <felipe@getchaotic.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[features]
default = []
client-side-only = []
debug-bullets = []
production = ["engine/use-browser"]
multiplayer = ["engine/physics-networking"]

[lib]
name = "3d_game"
path = "game/src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "3d_game_server"
path = "game/src/main.rs"

[profile.dev.package.rapier3d]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
engine = { version = "=0.4.248", features = [
  "new-input",
  "disjoint-timer",
  "enable-physics-debugging",
  # "brotli", # used for compressed assets for faster downloads
  "fast-physics",
], registry = "ultimate-shared" }

tagged = { version = "0.1.37", registry = "ultimate-shared" }

log = "0.4.27"
fix-hidden-lifetime-bug = "0.2.4"
uuid = { version = "1.4.0", features = ["serde", "v4", "js"] }
async-trait = "0.1.13"
serde = { version = "1.0.124", features = ["derive"] }
rand = "0.8.5"
bitflags = { version = "2.9.0", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.18.2", default-features = false, features = [
  "io-util",
  "rt",
  "time",
  "fs",
  "macros",
  "net",
  "tracing",
] }
env_logger = "0.8"
dotenv = "0.15.0"
num_cpus = "1.13.1"
rand = "0.8.5"
chrono = "0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"
num_cpus = "1.13.1"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.31"
